# IP-Camera-Monitoring

./: README.md
ip-camera-monitoring-of-object-person-detection/: CMakeLists.txt  object_detect.cpp
ip-camera-monitoring-of-object-person-detection/common/: exutils.cpp  exutils.h
object-detection/: config.json  object.cpp  object_detect.cpp
